<resources>
    <string name="app_name">SunrinTemplate</string>
    <string name="welcome">Welcome!</string>

    <string name="id">ID</string>
    <string name="password">Password</string>
    <string name="nickname">Nickname</string>
    <string name="remember_me">Remember me</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>

    <string name="don_t_have_an_account">Don\'t have an account? Sign Up</string>
    <string name="already_have_an_account">Already have an account? Sign In</string>

    <string name="description">description</string>
    <string name="follower">follower</string>
    <string name="following">following</string>

    <string name="zero">0</string>

    <string name="profile_edit">Profile Edit</string>
    <string name="my_room">My Room</string>

    <string name="world">World</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
</resources>