<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:paddingHorizontal="30dp"
    android:paddingVertical="30dp"

    tools:context=".main.account.AccountFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/id"
            android:textSize="30sp"
            android:textColor="@color/dark_gray"
            android:textStyle="bold"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_menu"
            android:layout_width="30dp"
            android:layout_height="30dp"

            android:layout_gravity="center_vertical"

            android:src="@drawable/ic_menu"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:layout_marginTop="20dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_profileImg"
            android:layout_width="80dp"
            android:layout_height="80dp"

            android:src="@drawable/ic_sample"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_follower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"

                android:text="@string/zero"
                android:textSize="25sp"
                android:textColor="@color/dark_gray"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/follower"
                android:textSize="15sp"
                android:textColor="@color/dark_gray"/>

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"

                android:text="@string/zero"
                android:textSize="25sp"
                android:textColor="@color/dark_gray"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/following"
                android:textSize="15sp"
                android:textColor="@color/dark_gray"/>

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="5dp"
        android:layout_marginBottom="2dp"

        android:text="@string/nickname"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="15dp"

        android:text="@string/description"
        android:textSize="15sp"
        android:textColor="@color/dark_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_profile_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            style="@style/Widget.Material3.Button.OutlinedButton"

            app:strokeColor="@color/dark_gray"
            app:strokeWidth="2dp"
            app:cornerRadius="10dp"

            android:paddingVertical="3dp"
            android:layout_marginEnd="10dp"

            android:text="@string/profile_edit"
            android:textSize="18sp"
            android:textColor="@color/dark_gray"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_my_room"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            style="@style/Widget.Material3.Button.OutlinedButton"

            app:strokeColor="@color/dark_gray"
            app:strokeWidth="2dp"
            app:cornerRadius="10dp"

            android:paddingVertical="3dp"

            android:text="@string/my_room"
            android:textSize="18sp"
            android:textColor="@color/dark_gray"/>

    </LinearLayout>

</LinearLayout>